...
                    <view key="view" contentMode="scaleToFill" id="513-s9-dWB">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S1t-V9-KAd">
                                <rect key="frame" x="190" y="433" width="34" height="30"/>
                                <state key="normal" title="Start"/>
                                <connections>
                                    <segue destination="T6c-xd-Qmn" kind="show" id="cda-gc-k3c"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Highscore" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tt0-0N-PFR">
                                <rect key="frame" x="172" y="483" width="70" height="30"/>
                                <state key="normal" title="Highscore"/>
                                <connections>
                                    <action selector="highscoreButtonHandler:" destination="bta-fL-YU4" eventType="touchUpInside" id="kDE-Ri-BN4"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nI-iX-TSa">
                                <rect key="frame" x="177.5" y="533" width="59" height="30"/>
                                <state key="normal" title="Click Me"/>
                                <connections>
                                    <action selector="exampleButtonHandler:" destination="bta-fL-YU4" eventType="touchUpInside" id="LDD-9z-gQZ"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2uw-4l-0NT">
                                <rect key="frame" x="20" y="128" width="374" height="34"/>
...
