...
    var questions: [Question] = []
    
    override func viewDidLoad() {
        super.viewDidLoad()
        startButton.isEnabled = false
        downloadQuestions(amount: 5)
        nameTextField.placeholder = "Your Name"
        nameTextField.delegate = self
        nameTextField.returnKeyType = .done
        if let name = UserDefaults.standard.string(forKey: "username") {
            nameTextField.text = name
        }
    }
...
