...
    private func showRightAnswerAlert(button:UIButton){
        haveWon = true
        rightAnswers += 1
        UIView.transition(with: button, duration: 1.3, options: [.transitionFlipFromBottom], animations: {
            button.backgroundColor = .green
        }) { (_) in
            let alertController = UIAlertController (title:"RIGHT", message : "YEAAAAAAAA It's correct", preferredStyle: UIAlertController.Style.alert)
            alertController.addAction(UIAlertAction(title: "YES", style : UIAlertAction.Style.default, handler: { [weak self] (_) in
                self?.goToNextScreen()
            }))
            self.present(alertController, animated: true,completion:nil)
        }

...
